# datapopy

./: .gitignore  README.md  pyproject.toml  requirements.txt
data_police_uk/: datapopy.py  soup_datapopy.py
data_police_uk/utils/: dataset.py  extract_zip_file.py  response.py  selenium_imports.py  soup.py  strings_and_lists.py
