[tool.poetry]
name = "datapopy"
version = "0.1.0"
description = "A Python wrapper for working with data.police.uk API easily and reliably."
authors = ["Dev A anand26dev@gmail.com"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/daa2618/datapopy"
repository = "https://github.com/daa2618/datapopy"
keywords = ["police", "UK", "API", "crime", "data", "wrapper"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
attrs = "==25.3.0"
beautifulsoup4 = "==4.13.4"
bs4 = "==0.0.2"
certifi = "==2025.8.3"
charset-normalizer = "==3.4.2"
click = "==8.2.1"
geopandas = "==1.1.1"
h11 = "==0.16.0"
idna = "==3.10"
joblib = "==1.5.1"
nltk = "==3.9.1"
numpy = "==2.3.2"
outcome = "==1.3.0.post0"
packaging = "==25.0"
pandas = "==2.3.1"
pip = "==25.2"
pyogrio = "==0.11.1"
pyproj = "==3.7.1"
PySocks = "==1.7.1"
python-dateutil = "==2.9.0.post0"
python-dotenv = "==1.1.1"
pytz = "==2025.2"
regex = "==2025.7.34"
requests = "==2.32.4"
selenium = "==4.34.2"
setuptools = "==65.5.0"
shapely = "==2.1.1"
six = "==1.17.0"
sniffio = "==1.3.1"
sortedcontainers = "==2.4.0"
soupsieve = "==2.7"
tqdm = "==4.67.1"
trio = "==0.30.0"
trio-websocket = "==0.12.2"
typing_extensions = "==4.14.1"
tzdata = "==2025.2"
urllib3 = "==2.5.0"
webdriver-manager = "==4.0.2"
websocket-client = "==1.8.0"
wsproto = "==1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"